--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -59,6 +59,7 @@ html,
 body {
   margin: 0;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 html {
